<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInput" >

    <TextView
        android:id="@+id/textView_call_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/call_phone_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_call_phone_number"
        android:layout_marginTop="20dp"
        android:text="@string/number_1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_number_1"
        android:layout_below="@+id/textView_number_1"
        android:layout_marginTop="20dp"
        android:text="@string/number_2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_number1"
        android:layout_alignTop="@+id/textView_number_2"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView_text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_call_phone_number"
        android:layout_centerVertical="true"
        android:text="@string/text_phone_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_number_2"
        android:layout_below="@+id/textView_text_phone_number"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_number2"
        android:layout_alignTop="@+id/textView_number"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_text_phone_number"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/submit" 
        android:onClick="onSubmit"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start"
        android:layout_alignBottom="@+id/start"
        android:layout_alignRight="@+id/textView_call_phone_number"
        android:text="@string/reset" 
        android:onClick="onReset"/>

    <EditText
        android:id="@+id/editText_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_number_2"
        android:layout_toRightOf="@+id/textView_number"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>
 
</RelativeLayout>
